[package]
name = "k9"
version = "0.1.4"
authors = ["Aaron Abramov <aaron@abramov.io>"]
edition = "2018"
description = "rust testing library"
license = "MIT"
repository = "https://github.com/aaronabramov/k9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diff = "0.1.12"
colored = "1.9.3"
regex = "1.3.7"

[dev-dependencies]
anyhow = "1.0.31"
