[package]
name = "k9"
version = "0.2.0"
authors = ["Aaron Abramov <aaron@abramov.io>"]
edition = "2018"
description = "rust testing library"
readme = "README.md"
license = "MIT"
repository = "https://github.com/aaronabramov/k9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["regex"]

[dependencies]
colored = "1.9.3"
diff = "0.1.12"
lazy_static = "1.4.0"
regex = { version = "1.3.7", optional = true }
term_size = "0.3.2"

[dev-dependencies]
anyhow = "1.0.31"
