[package]
name = "k9"
version = "0.2.6"
authors = ["Aaron Abramov <aaron@abramov.io>"]
edition = "2018"
description = "rust testing library"
readme = "README.md"
license = "MIT"
repository = "https://github.com/aaronabramov/k9"
exclude = ["tests/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["regex"]

[dependencies]
colored = "1.9.3"
diff = "0.1.12"
lazy_static = "1.4.0"
libc = "0.2"
proc-macro2 = { version = "1.0.13", default-features = false, features= ["span-locations"] }
regex = { version = "1.3.7", optional = true }
syn = { version = "1.0.33", features = ["full", "extra-traits", "visit"] }
term_size = "0.3.2"

[dev-dependencies]
anyhow = "1.0.31"
rand = "0.7.3"
sha2 = "0.9.1"
strip-ansi-escapes = "0.1.0"
