[package]
name = "k9"
version = "0.11.0"
authors = ["Aaron Abramov <aaron@abramov.io>"]
edition = "2018"
description = "rust testing library"
readme = "../README.md"
license = "MIT"
repository = "https://github.com/aaronabramov/k9"
exclude = ["tests/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["regex"]
custom_comparison_formatters = []

[dependencies]
colored = "1.9"
diff = "0.1"
lazy_static = "1.4"
libc = "0.2"
proc-macro2 = { version = "1.0", default-features = false, features= ["span-locations"] }
regex = { version = "1.3", optional = true }
syn = { version = "1.0", features = ["full", "extra-traits", "visit"] }
term_size = "0.3"
anyhow = "1.0.32"

[dev-dependencies]
rand = "0.7.3"
sha2 = "0.9.1"
strip-ansi-escapes = "0.1.0"
derive_builder = "0.9.0"
k9_stable = { version = "0.3.0", package = "k9" }
