[package]
name = "k9_tests"
version = "0.1.0"
authors = ["Aaron Abramov <aaron@abramov.io>"]
edition = "2018"

# More information on Caret requirements: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#caret-requirements
[dependencies]
anyhow = "1.0.34"
derive_builder = "0.9.0"
fs_extra = "1.2.0"
k9_released = { version = "*", package = "k9" }
lazy_static = "1.4.0"
regex = "1.4.2"

[[test]]
name = "k9_tests"
path = "mod.rs"
